--- a/pages/17087.html
+++ b/pages/17087.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1031,19 +1031,27 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>For <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> the <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation values</a> (VEVs) of the theory is locally a <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> between the space of <a class='existingWikiWord' href='/nlab/show/moduli'>moduli</a> of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>vector multiplet</a> (the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> sector) and those of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>hypermultiplet</a> (the matter field sector). The former is called the <em>Coulomb branch</em>, and the latter the <a class='existingWikiWord' href='/nlab/show/Higgs+branch'>Higgs branch</a>. These are <a class='existingWikiWord' href='/nlab/show/duality+in+physics'>dual</a> to each other to it under a version of <a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>mirror symmetry</a> .</p>
 
 <p>This is the topic of <a class='existingWikiWord' href='/nlab/show/Seiberg-Witten+theory'>Seiberg-Witten theory</a>.</p>
 
+<p>Definitions of the Coulomb and Higgs branches have been extended to <a class='existingWikiWord' href='/nlab/show/N%3D4+D%3D3+super+Yang-Mills+theory'>N=4 D=3 super Yang-Mills theory</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/symplectic+duality'>symplectic duality</a></li>
+</ul>
+
 <h2 id='references'>References</h2>
 
 <p>The terminology “Coulomb branch” and “Higgs branch” first appears in</p>
 
 <ul>
-<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_a3e17fa9f08e02d9f531297f74430d922cebd6aa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
+<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_9cdedbcdd3afd489dbba1e1c2435aab84119b733_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
 </ul>
 
 <p>Review includes</p>
@@ -1056,11 +1064,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_a3e17fa9f08e02d9f531297f74430d922cebd6aa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, I</em> (<a href='http://arxiv.org/abs/1503.03676'>arXiv:1503.03676</a>)</p>
+<p>Hiraku Nakajima, <em>Introduction to a provisional mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_9cdedbcdd3afd489dbba1e1c2435aab84119b733_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories</em> (<a href='http://arxiv.org/abs/1706.05154'>arXiv:1706.05154</a>)</p>
 </li>
 
 <li>
-<p>Alexander Braverman, Michael Finkelberg, Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_a3e17fa9f08e02d9f531297f74430d922cebd6aa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, II</em> (<a href='http://arxiv.org/abs/1601.03586'>arXiv:1601.03586</a>)</p>
+<p>Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_9cdedbcdd3afd489dbba1e1c2435aab84119b733_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, I</em> (<a href='http://arxiv.org/abs/1503.03676'>arXiv:1503.03676</a>)</p>
+</li>
+
+<li>
+<p>Alexander Braverman, Michael Finkelberg, Hiraku Nakajima, <em>Towards a mathematical definition of Coulomb branches of 3-dimensional <math class='maruku-mathml' display='inline' id='mathml_9cdedbcdd3afd489dbba1e1c2435aab84119b733_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N} = 4</annotation></semantics></math> gauge theories, II</em> (<a href='http://arxiv.org/abs/1601.03586'>arXiv:1601.03586</a>)</p>
 </li>
 
 <li>
@@ -1068,7 +1080,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Ben+Webster'>Ben Webster</a>, <em>Koszul duality between Higgs and Coulomb categories <math class='maruku-mathml' display='inline' id='mathml_a3e17fa9f08e02d9f531297f74430d922cebd6aa_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O}</annotation></semantics></math></em>, (<a href='https://arxiv.org/abs/1611.06541'>arXiv:1611.06541</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Ben+Webster'>Ben Webster</a>, <em>Koszul duality between Higgs and Coulomb categories <math class='maruku-mathml' display='inline' id='mathml_9cdedbcdd3afd489dbba1e1c2435aab84119b733_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O}</annotation></semantics></math></em>, (<a href='https://arxiv.org/abs/1611.06541'>arXiv:1611.06541</a>)</p>
 </li>
 </ul>
 
@@ -1077,14 +1089,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 19, 2018 23:30:49 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  Revised on February 20, 2018 03:35:14 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Coulomb+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coulomb+branch/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Coulomb+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coulomb+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Coulomb+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coulomb+branch/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Coulomb+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coulomb+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
