--- a/pages/7344.html
+++ b/pages/7344.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1031,20 +1031,20 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#reduction_from__'>Reduction from <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N = 2</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D = 4</annotation></semantics></math></a></li><li><a href='#mirror_symmetry'>Mirror symmetry</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#reduction_from__'>Reduction from <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N = 2</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D = 4</annotation></semantics></math></a></li><li><a href='#mirror_symmetry'>Mirror symmetry</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The special case of <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a> over a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 3 and with <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N = 4</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>.</p>
+<p>The special case of <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a> over a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 3 and with <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N = 4</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>.</p>
 
 <h2 id='properties'>Properties</h2>
 
-<h3 id='reduction_from__'>Reduction from <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N = 2</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D = 4</annotation></semantics></math></h3>
+<h3 id='reduction_from__'>Reduction from <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N = 2</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D = 4</annotation></semantics></math></h3>
 
-<p>The <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N = 4</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>3</mn></mrow><annotation encoding='application/x-tex'>D = 3</annotation></semantics></math> SYM theory can be obtained by <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>dimensional reduction</a> from <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> (<a href='#SeibergWitten96'>Seiberg-Witten 96</a>)</p>
+<p>The <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N = 4</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>3</mn></mrow><annotation encoding='application/x-tex'>D = 3</annotation></semantics></math> SYM theory can be obtained by <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>dimensional reduction</a> from <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> (<a href='#SeibergWitten96'>Seiberg-Witten 96</a>)</p>
 
 <h3 id='mirror_symmetry'>Mirror symmetry</h3>
 
-<p>A version of <a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>mirror symmetry</a> acts on the <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N = 4</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_833ff8e44c7366ee2927b4bb40fac9b15e7ba410_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>3</mn></mrow><annotation encoding='application/x-tex'>D = 3</annotation></semantics></math> SYM <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of vacua and exchanges the <a class='existingWikiWord' href='/nlab/show/Coulomb+branch'>Coulomb branch</a> with the <a class='existingWikiWord' href='/nlab/show/Coulomb+branch'>Higgs branch</a>. (<a href='#IntriligatorSeiberg'>Intriligator-Seiberg</a>)</p>
+<p>A version of <a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>mirror symmetry</a> acts on the <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>N = 4</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_a6c2188aa69e8dc0578e7d0cac8ea99c4e40f943_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>3</mn></mrow><annotation encoding='application/x-tex'>D = 3</annotation></semantics></math> SYM <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of vacua and exchanges the <a class='existingWikiWord' href='/nlab/show/Coulomb+branch'>Coulomb branch</a> with the <a class='existingWikiWord' href='/nlab/show/Higgs+branch'>Higgs branch</a>. (<a href='#IntriligatorSeiberg96'>Intriligator-Seiberg 96</a>)</p>
 
 <p>See also the discussion at <em><a class='existingWikiWord' href='/nlab/show/symplectic+duality'>symplectic duality</a></em>.</p>
 
@@ -1071,7 +1071,7 @@ margin-left: 0em;
 <p>The mirror symmetry operation was discussed in</p>
 
 <ul>
-<li id='IntriligatorSeiberg'><a class='existingWikiWord' href='/nlab/show/Kenneth+Intriligator'>Ken Intriligator</a>, <a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <em>Mirror Symmetry in Three Dimensional Gauge Theories</em>, Phys.Lett.B387:513-519,1996 (<a href='http://arxiv.org/abs/hep-th/9607207'>arXiv:hep-th/9607207</a>)</li>
+<li id='IntriligatorSeiberg96'><a class='existingWikiWord' href='/nlab/show/Kenneth+Intriligator'>Ken Intriligator</a>, <a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <em>Mirror Symmetry in Three Dimensional Gauge Theories</em>, Phys. Lett.B 387 : 513-519,1996 (<a href='http://arxiv.org/abs/hep-th/9607207'>arXiv:hep-th/9607207</a>)</li>
 </ul>
 
 <p>
@@ -1079,14 +1079,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2016 03:07:14 
+  Revised on February 20, 2018 04:20:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.35.50.158)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/N%3D4+D%3D3+super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/N%3D4+D%3D3+super+Yang-Mills+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/N%3D4+D%3D3+super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/N%3D4+D%3D3+super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/N%3D4+D%3D3+super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/N%3D4+D%3D3+super+Yang-Mills+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/N%3D4+D%3D3+super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/N%3D4+D%3D3+super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
